--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.uk.umf_solutions.warehousehelper.MainActivity">
+    tools:context="com.uk.umf_solutions.warehousehelper.common.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
