--- a/mobile/src/main/res/layout/custom_toolbar.xml
+++ b/mobile/src/main/res/layout/custom_toolbar.xml
@@ -8,20 +8,33 @@
     android:layout_margin="0dp"
     android:background="@color/primary"
     android:padding="0dp"
-   app:popupTheme="@style/AppTheme.PopupOverlay">
+   app:popupTheme="@style/AppTheme.PopupOverlay"
+    android:minHeight="0dp"
+    android:elevation="9dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="4dp">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_view_customers_name"
-            android:layout_width="0dp"
-            android:layout_weight="2"
+            android:id="@+id/text_info_viewpager"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="4dp"
+            android:textColor="@android:color/white"
+            android:text="@string/default_text"
+            android:textSize="14sp"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="normal|bold"/>
+
+
+        <TextView
+            android:id="@+id/text_tab_name_viewpager"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="@string/default_text"
             android:textColor="@android:color/white"
             android:textSize="14sp"
@@ -30,5 +43,6 @@
             android:textAlignment="center" />
 
     </LinearLayout>
+
 
 </android.support.v7.widget.Toolbar>
