--- a/mobile/src/main/res/layout/fragment_where_my_stock_fragment__ui.xml
+++ b/mobile/src/main/res/layout/fragment_where_my_stock_fragment__ui.xml
@@ -6,11 +6,13 @@
     tools:context="com.uk.umf_solutions.warehousehelper.ui.whereMyStockFunction.WhereMyStockFragment_UI">
 
     <TextView
+        android:id="@+id/empty_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/default_text" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/wms_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
