--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -3,4 +3,63 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin_default">16dp</dimen>
+    <dimen name="activity_vertical_margin_default">16dp</dimen>
+    <!-- Screen margins custom *4dp  per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin_small">4dp</dimen>
+    <dimen name="activity_vertical_margin_small">4dp</dimen>
+    <dimen name="activity_horizontal_margin_medium">8dp</dimen>
+    <dimen name="activity_vertical_margin_medium">8dp</dimen>
+    <dimen name="activity_horizontal_margin_large">20dp</dimen>
+    <dimen name="activity_vertical_margin_large">20dp</dimen>
+    <!-- Text Size *4dp  per the Android Design guidelines.    -->
+    <dimen name="text_size_small">8sp</dimen>
+    <dimen name="text_size_default">12sp</dimen>
+    <dimen name="text_size_medium">16sp</dimen>
+    <dimen name="text_size_large">24sp</dimen>
+    <!-- Padding size *4dp  per the Android Design guidelines. -->
+    <dimen name="padding_default">4dp</dimen>
+    <dimen name="padding_medium">8dp</dimen>
+    <dimen name="padding_large">16dp</dimen>
+
+    <!-- Text Size -->
+    <dimen name="text_size_tiny">6sp</dimen>
+    <dimen name="text_size_xtiny">8sp</dimen>
+    <dimen name="text_size_normal">13sp</dimen>
+    <dimen name="text_size_xnormal">16sp</dimen>
+    <dimen name="text_size_xxnormal">18sp</dimen>
+    <dimen name="text_size_header">20sp</dimen>
+    <dimen name="text_size_xlarge">26sp</dimen>
+    <dimen name="text_size_xxlarge">28sp</dimen>
+    <dimen name="text_size_huge">30sp</dimen>
+    <dimen name="text_width_height">170dp</dimen>
+    <dimen name="text_size_height">30dp</dimen>
+
+    <!-- Margin & padding -->
+    <dimen name="margin_padding_tiny">4dp</dimen>
+    <dimen name="margin_padding_xtiny">6dp</dimen>
+    <dimen name="margin_padding_small">9dp</dimen>
+    <dimen name="margin_padding_xsmall">12dp</dimen>
+    <dimen name="margin_padding_normal">15dp</dimen>
+    <dimen name="margin_padding_xnormal">20dp</dimen>
+    <dimen name="margin_padding_xxnormal">25dp</dimen>
+    <dimen name="margin_padding_large">30dp</dimen>
+    <dimen name="margin_padding_xlarge">40dp</dimen>
+    <dimen name="margin_padding_xxlarge">50dp</dimen>
+    <dimen name="margin_large">70dp</dimen>
+    <dimen name="spacing">9dp</dimen>
+    <dimen name="dividerHeight">0.5dp</dimen>
+    <dimen name="icon_width_height">30dp</dimen>
+    <dimen name="large_brush">40dp</dimen>
+
+    <dimen name="product_image_thumbnail_size">90dp</dimen>
+    <dimen name="height_note_order">90dp</dimen>
+
+    <dimen name="elevation_default">6dp</dimen>
+    <dimen name="elevation_medium">16dp</dimen>
+    <dimen name="elevation_large">24dp</dimen>
+    <dimen name="image_person_y">60dp</dimen>
+    <dimen name="image_person_x">80dp</dimen>
 </resources>
