--- a/mobile/src/main/res/layout/custom_toolbar.xml
+++ b/mobile/src/main/res/layout/custom_toolbar.xml
@@ -7,10 +7,11 @@
     android:layout_height="wrap_content"
     android:layout_margin="0dp"
     android:background="@color/primary"
+    android:elevation="9dp"
+   android:minHeight="0dp"
     android:padding="0dp"
-   app:popupTheme="@style/AppTheme.PopupOverlay"
-    android:minHeight="0dp"
-    android:elevation="9dp">
+    app:layout_scrollFlags="scroll|enterAlways"
+    app:popupTheme="@style/AppTheme.PopupOverlay">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,25 +23,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:textColor="@android:color/white"
-            android:text="@string/default_text"
-            android:textSize="14sp"
             android:fontFamily="sans-serif-condensed"
+            android:text="@string/default_text"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
             android:textStyle="normal|bold"/>
 
 
         <TextView
             android:id="@+id/text_tab_name_viewpager"
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif-condensed"
             android:text="@string/default_text"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="14sp"
-            android:fontFamily="sans-serif-condensed"
-            android:textStyle="normal|bold"
-            android:textAlignment="center" />
+            android:textStyle="normal|bold" />
 
     </LinearLayout>
 
