--- a/mobile/src/main/res/layout/fragment_where_my_stock_fragment__ui.xml
+++ b/mobile/src/main/res/layout/fragment_where_my_stock_fragment__ui.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="4dp"
-    tools:context="com.uk.umf_solutions.warehousehelper.ui.whereMyStockFunction.WhereMyStockFragment_UI">
+    android:padding="@dimen/padding_default"
+    tools:context=".ui.whereMyStockFunction.WhereMyStockFragment_UI">
 
 
     <android.support.v7.widget.RecyclerView
