--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -9,13 +9,16 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="77dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="false"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:weightSum="1"
-        app:elevation="@dimen/elevation_default">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <include layout="@layout/custom_toolbar"/>
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
